# simple-requests-library

./: .gitmodules  .travis.yml  LICENSE  README.org  Tupfile  get_url.cpp  get_urls.cpp  meson.build  meson_options.txt  requests.txt
examples/: get_urls.cpp
src/gdg/srl/: alias.hpp  exceptions.hpp  get_url.cpp  get_url.hpp  srl.cpp  srl.hpp
subprojects/: docopt.wrap
subprojects/docopt/: meson.build
