project('docopt', 'cpp', default_options : ['cpp_std=c++14'])

docopt_lib = library('docopt', sources : ['docopt.h',
                                          'docopt.cpp',
                                          'docopt_private.h',
                                          'docopt_util.h',
                                          'docopt_value.h'])

